weapp/termite/static/v4/css/app_widget.css
/* ... */
.xa-lottery-go-to{
	background: url("/termite_static/img/component/lottery/lottery_roulette_go.png") no-repeat;
	background-size: 100%;
	border-radius: 2px;
	background-position: 0 -139px;
}
.xui-lottery-unit .xa-lottery-unit img{
	height: 63px;
	width: 63px;
	margin: auto;
}
.xui-lottery-unit.active{
	background-color:#FFFF01;
	box-shadow: 0 0 30px #FFFF01;
	-webkit-box-shadow: 0 0 20px #FFFF01;
}

.xa-circle.active{
	background-color:#FFFF01;
	box-shadow: 0 0 10px #FFFF01;
	-webkit-box-shadow: 0 0 105px #FFFF01;
}
.xa-circle{
	width: 12px;
	height: 12px;
	position: absolute;
	background-color: yellow;
	-moz-border-radius:10em;
	-webkit-border-radius:10em;
	border-radius:10em;
}
.xa-circle-unit-0{
	top:5px;
	left: 5px;
}
.xa-circle-unit-1{
	top:5px;
	left: 70px;
}
.xa-circle-unit-2{
	top:5px;
	left:135px;
}
.xa-circle-unit-3{
	top:5px;
	left: 200px;
}
.xa-circle-unit-4{
	top:5px;
	left: 263px;
}
.xa-circle-unit-5{
	top: 70px;
	left: 263px;
}
.xa-circle-unit-6{
	top: 135px;
	left: 263px;
}
.xa-circle-unit-7{
	top: 198px;
	left: 263px;
}
.xa-circle-unit-8{
	top: 263px;
	left: 263px;
}
.xa-circle-unit-9{
	top: 263px;
	left: 200px;
}
.xa-circle-unit-10{
	top: 263px;
	left: 135px;
}
.xa-circle-unit-11{
	top: 263px;
	left: 70px;
}
.xa-circle-unit-12{
	top: 263px;
	left: 5px;
}
.xa-circle-unit-13{
	top: 198px;
	left: 5px;
}
.xa-circle-unit-14{
	top: 135px;
	left: 5px;
}
.xa-circle-unit-15{
	top: 70px;
	left: 5px;
}
.selection-radio{
	background: url("/termite_static/img/radio.png") no-repeat;
	background-size: 70%;
    width: 30px;
    height: 22px;
	position: absolute;
}
.radio-select{
	background-position: 0 -48px;
}
.selection-checkbox{
	background: url("/termite_static/img/checkbox.png") no-repeat;
	background-size: 70%;
    width: 30px;
    height: 22px;
	position: absolute;
}
.checkbox-select{
	background-position: 0 -34px;
}
/*百宝箱》微信抽奖，预览时下方不留灰色空白*/
.notweixin-lottery_active{
	background-color: #8d00ab !important;
}

/**
 * 上传图片UploadImg样式
 */
.wui-UploadImg {
	padding: 15px 0 0 20px;
}
.wui-UploadImg .wui-i-title {
	color: #333;
	margin-bottom: 10px;
	font-size: 18px;
	font-weight: bold;
	border-left: solid 4px #1AA2F8;
	padding-left: 10px;
}
.wui-UploadImg .wui-i-mandatory {
	color: #CDCDCD;
}

.wui-i-uploadimg .xui-productPhoto .xui-addPhoto span.xui-i-box,
.wui-i-uploadimg .xui-productPhoto .xui-deletePhoto{
    display: inline-block;
    width:45px;
    height:45px;
    background: url(/static_v2/img/webapp/mall/photoBtn.png);
	background-color: #fff;
    -webkit-background-size: 92px 45px;
    background-size: 92px 45px;
    background-position: -47px 0;
}
.wui-i-uploadimg .xui-productPhoto .xui-deletePhoto{
    background-position: 0 0;
}
.wui-i-uploadimg .xui-productPhoto .xui-remove{
    top:0px;
    right:0px;
    z-index:99;
    display:inline-block;
    width:45px;
    height:45px;
    background:rgba(0,0,0,0.5);
    text-align: center;
    line-height: 45px;
	margin-right: 4px;
}
.wui-i-uploadimg .xui-productPhoto .xui-remove i{
    background: url(/static_v2/img/webapp/mall/sprite0506.png);
    -webkit-background-size: 195px 123px;
    background-size: 195px 123px;
    background-position: -44px 0;
    width: 23px;
    height: 22px;
    display: inline-block;
    top:11px;
    left: 12px;
}
.wui-i-uploadimg .xui-productPhoto .xui-addPhoto .xui-i-box i{
    margin-left: -4px;
}
.wui-i-uploadimg .xui-productPhoto .xui-text{
    color: #A9A9A9;
    line-height: 45px;
	padding-left: 10px;
}
.wui-i-uploadimg.xa-inputControl {
	min-height: 45px;
	padding-bottom: 15px;
}
.wui-i-uploadimg .xui-finishEdit{
  line-height: 45px;
}
.xui-i-box {
  margin-right: 4px;
}

